force-app/main/default/objects/MobileTelephonyObject__c/MobileTelephonyObject__c.object-meta.xml
<CustomObject>
    <label>MobileTelephonyObject</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>MobileTelephonyObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MobileTelephonyObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>