force-app/main/default/objects/MobileTelephonyObject__c/fields/AppVersion__c.field-meta.xml
<CustomField>
    <fullName>AppVersion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AppVersion</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>