force-app/main/default/objects/MobileTelephonyObject__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AppVersion__c</columns>
    <columns>DeviceIdentifier__c</columns>
    <columns>DeviceModel__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>UserId__c</columns>
    <columns>OsVersion__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>